@@ -2,6 +2,8 @@
  - feat: support new DCOR API for uploading data directly to S3
  - feat: perform faster ETag verification instead of SHA256 summing
  - enh: add api.errors.APIBadRequest error class
+ - enh: speed-up resource download by computing SHA256 while downloading
+ - enh: improve logging
  - setup: bump dclab from 0.57.0 to 0.58.2
 0.13.3
  - setup: bump dclab from 0.55.7 to 0.57.0
